--- a/SplitWise/Base.lproj/Main.storyboard
+++ b/SplitWise/Base.lproj/Main.storyboard
@@ -207,7 +207,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="dPb-gZ-SiW"/>
                                 </constraints>
-                                <state key="normal" title="Expences">
+                                <state key="normal" title="Expenses">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
@@ -407,6 +407,47 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yg3-tj-NND" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1842" y="-537"/>
+        </scene>
+        <!--Expenses-->
+        <scene sceneID="6b7-CC-BCm">
+            <objects>
+                <viewController storyboardIdentifier="ExpenseDiaryViewController" id="VjN-en-0qf" customClass="ExpenseDiaryViewController" customModule="SplitWise" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="a9e-Tx-Dog">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FoO-Hu-H27">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="Rki-cF-RrI">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Rki-cF-RrI" id="38d-WT-JmV">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="FoO-Hu-H27" firstAttribute="trailing" secondItem="c0p-Vr-P0x" secondAttribute="trailing" id="227-2f-hnF"/>
+                            <constraint firstItem="FoO-Hu-H27" firstAttribute="bottom" secondItem="c0p-Vr-P0x" secondAttribute="bottom" id="Shx-tb-CPG"/>
+                            <constraint firstItem="FoO-Hu-H27" firstAttribute="top" secondItem="c0p-Vr-P0x" secondAttribute="top" id="Z6B-JB-5Zj"/>
+                            <constraint firstItem="FoO-Hu-H27" firstAttribute="leading" secondItem="c0p-Vr-P0x" secondAttribute="leading" id="qFv-ko-n3s"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="c0p-Vr-P0x"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Expenses" id="25Z-oc-Fv2"/>
+                    <connections>
+                        <outlet property="tableView" destination="FoO-Hu-H27" id="7yh-Ls-XD8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tll-0l-9ix" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1999" y="-1410"/>
         </scene>
     </scenes>
 </document>
