--- a/SplitWise/Base.lproj/Main.storyboard
+++ b/SplitWise/Base.lproj/Main.storyboard
@@ -449,5 +449,46 @@
             </objects>
             <point key="canvasLocation" x="1999" y="-1410"/>
         </scene>
+        <!--Expenses-->
+        <scene sceneID="TUh-eF-7fr">
+            <objects>
+                <viewController storyboardIdentifier="BalanceViewController" id="StN-9Y-LFU" customClass="BalanceViewController" customModule="SplitWise" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="41E-K4-Kye">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UY3-Ud-pfx">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="BTq-3C-rtO">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BTq-3C-rtO" id="cQv-CE-R2C">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="UY3-Ud-pfx" firstAttribute="top" secondItem="3SO-A8-duw" secondAttribute="top" id="OST-Ka-3D8"/>
+                            <constraint firstItem="UY3-Ud-pfx" firstAttribute="leading" secondItem="3SO-A8-duw" secondAttribute="leading" id="Pov-Vn-hDG"/>
+                            <constraint firstItem="UY3-Ud-pfx" firstAttribute="trailing" secondItem="3SO-A8-duw" secondAttribute="trailing" id="ap4-Nf-CFS"/>
+                            <constraint firstItem="UY3-Ud-pfx" firstAttribute="bottom" secondItem="3SO-A8-duw" secondAttribute="bottom" id="eH1-ug-mdz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="3SO-A8-duw"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Expenses" id="joy-fk-R0m"/>
+                    <connections>
+                        <outlet property="tableView" destination="UY3-Ud-pfx" id="CCq-xT-WiE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="guE-0M-QD6" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="254" y="245"/>
+        </scene>
     </scenes>
 </document>
